 * Improved socket performance (would be nice if we could be used as a "hub")
 * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "

2008-02-26 MickeM
 + Added installer
 
2008-02-22 MickeM
 * Fixed issues in the NRPE module (now returns the correct status)
 + Added a lot of "error log" for when the packet size in NRPEListener is not correct 
    (might make it simpler to diagnose problems)

2008-02-20 MickeM
 + Added new module NRPEClient that can act as a NRPE client, might be useful for testing things and 
   eventually for relaying events.
   Usage: nsclient++ -noboot NRPEClient -H 192.168.0.1 -p 5666 -c check_something -a foo bar
   This is an early concept so don't expect much...
 * Fixed a bug in NSCA module (now it works again :)
 + Added a command wrapper for the NRPECLient module so now it can act as a check command.
   (No argument handling yet though), For a sample check out the [NRPE Client Handlers] section in NSC.ini

2008-02-19 MickeM
 + Fixed a buffer overflow in the NRPE socket handling.
 
2008-02-18 MickeM
 + Added proper output handling to process subsystem (now you can execute programs that return "much" data.
 + Added select support for SSL_write (now you can send "any amount of data" to the (SSL) socket.
   Since check_nrpe doesn't do this it wont work in that end, but still...

2008-02-16 MickeM
 + Re factored ExternalCommand handling so NRPE and new module does the same thing.

2008-02-14 MickeM
 + Added so commands starting in host_ (NSCA Handlers) are sent as host-commands
 * Fixed a copy constructor in NSCA Commands (now service checks are sent as service checks)

2008-02-13 MickeM
 + Added string_length to [Settings] as well (used internally) for all "injected" buffers.
 * Fixed issue with scripts result truncated after 1024 chars 