@@ -149,6 +149,12 @@
 #define C_SYSTEM_ENUMPROC_METHOD_DEFAULT C_SYSTEM_ENUMPROC_METHOD_AUTO
 
 
+#define EVENTLOG_SECTION_TITLE _T("Eventlog")
+#define EVENTLOG_DEBUG _T("debug")
+#define EVENTLOG_DEBUG_DEFAULT 0
+#define EVENTLOG_SYNTAX _T("syntax")
+#define EVENTLOG_SYNTAX_DEFAULT _T("")
+
 #define NSCA_AGENT_SECTION_TITLE _T("NSCA Agent")
 #define NSCA_CMD_SECTION_TITLE _T("NSCA Commands")
 #define NSCA_INTERVAL _T("interval")
