@@ -6,6 +6,12 @@ TODO:
  * Improved socket performance (would be nice if we could be used as a "hub")
  * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "
 
+2008-03-05 MickeM
+ + Added debug to new section [Eventlog], when enabled it will (log) wat lines matched what, this is a pretty big performance overhead so dont run with this one.
+ + Added syntax to new section [Eventlog] used as a shorthand for the syntax to use as "default" (when no syntax=... option is given)
+ * Fixed an issue with eventlog and . matching.
+ + Added shorthand ! for != in "all" numeric filters (eventlog)
+ 
 2008-02-26 MickeM
  + Added installer
  
